--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class=top-container-fluid>
         <h1>I am Alexis</h1>
         <h2>Expert in Digital Transformation.</h2>
-        <img class="images img-fluid" src="images/mountain1.png" alt="mountain-img responsive image">
+        <img class="images img-fluid" src="https://athabute.github.io/repo-name/images/mountain1.png" alt="mountain-img responsive image">
       </div>
 
   </section>
