--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div class="middle-container">
     <div class="profile">
       <h2>Hello.</h2>
-      <img class="bald" src="images/bald.png" alt="bald-img">
+      <img class="bald" src="https://github.com/athabute/MySite/blob/master/Images/bald.png" alt="bald-img">
       <p class="intro">I have been working in Digital for 15 years, through various positions in large corporate, allowing me to develop broad digital skills.</p>
     </div>
     <hr>
@@ -88,25 +88,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <h2>My Skills.</h2>
 
       <div class="skill-row">
-        <img class="skill1" src="images/campaign.png" alt="campaign">
+        <img class="skill1" src="https://github.com/athabute/MySite/blob/master/Images/campaign.png" alt="campaign">
         <h3>Digital Media</h3>
         <p>Branding & Performance campaigns accross all channels (SEA, Programmatic & Social) have no secrets for me.</p>
       </div>
 
       <div class="skill-row">
-        <img class="skill2" src="images/shopping.png" alt="shopping">
+        <img class="skill2" src="https://github.com/athabute/MySite/blob/master/Images/shopping.png" alt="shopping">
         <h3>eCommerce</h3>
         <p>Marketplaces or in-house eCommerce? I have evolved in both challenging environments.</p>
       </div>
 
       <div class="skill-row">
-        <img class="skill3" src="images/monitor.png" alt="monitor">
+        <img class="skill3" src="https://github.com/athabute/MySite/blob/master/Images/monitor.png" alt="monitor">
         <h3>Web Design & U/X</h3>
         <p>I had the chance to work on various frontend web design sprints, from journey definition to U/X.</p>
       </div>
 
       <div class="skill-row">
-        <img class="skill4" src="images/report.png" alt="shopping">
+        <img class="skill4" src="https://github.com/athabute/MySite/blob/master/Images/report.png" alt="shopping">
         <h3>Analytics</h3>
         <p>I had multiple opportunities to track and analyze the performance of websites & online marketing campaigns using tools such as Google Analytics or Adobe Omniture.</p>
       </div>
