--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class=top-container-fluid>
         <h1>I am Alexis</h1>
         <h2>Expert in Digital Transformation.</h2>
-        <img class="images img-fluid" src="Images/mountain1.png" alt="mountain-img responsive image">
+        <img class="images img-fluid" src="Images/mountain1.png" alt="mountain1-img responsive image">
       </div>
 
   </section>
@@ -88,25 +88,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <h2>My Skills.</h2>
 
       <div class="skill-row">
-        <img class="skill1" src="Images/campaign.png" alt="campaign">
+        <img class="skill1" src="Images/campaign.png" alt="campaign-img">
         <h3>Digital Media</h3>
         <p>Branding & Performance campaigns accross all channels (SEA, Programmatic & Social) have no secrets for me.</p>
       </div>
 
       <div class="skill-row">
-        <img class="skill2" src="Images/shopping.png" alt="shopping">
+        <img class="skill2" src="Images/shopping.png" alt="shopping-img">
         <h3>eCommerce</h3>
         <p>Marketplaces or in-house eCommerce? I have evolved in both challenging environments.</p>
       </div>
 
       <div class="skill-row">
-        <img class="skill3" src="Images/monitor.png" alt="monitor">
+        <img class="skill3" src="Images/monitor.png" alt="monitor-img">
         <h3>Web Design & U/X</h3>
         <p>I had the chance to work on various frontend web design sprints, from journey definition to U/X.</p>
       </div>
 
       <div class="skill-row">
-        <img class="skill4" src="Images/report.png" alt="shopping">
+        <img class="skill4" src="Images/report.png" alt="shopping-img">
         <h3>Analytics</h3>
         <p>I had multiple opportunities to track and analyze the performance of websites & online marketing campaigns using tools such as Google Analytics or Adobe Omniture.</p>
       </div>
