--- a/experiences.html
+++ b/experiences.html
@@ -69,14 +69,14 @@
   <div class=top-container-fluid>
           <h1>I am dedicated</h1>
           <h2>to everything I do.</h2>
-              <img class="images img-fluid" src="images/experiment.png" alt="game-img responsive image">
+              <img class="images img-fluid" src="Images/experiment.png" alt="experiment-img responsive image">
     </div>
 
   </section>
 
   <!-- Infographic -->
 <div class="infographic">
-  <img src="images/Alexis Infographic_no name.png" class="img-fluid" alt="Responsive image">
+  <img src="Images/Alexis Infographic_no name.png" class="img-fluid" alt="Alexis Infographic_no name-img Responsive image">
 </div>
 
   <!-- download -->
