--- a/certifications.html
+++ b/certifications.html
@@ -82,7 +82,7 @@
     <div class=top-container-fluid>
       <h1>I am qualified</h1>
       <h2>in everything I do.</h2>
-      <img class="images img-fluid" src="images/certificate.png" alt="game-img responsive image">
+      <img class="images img-fluid" src="Images/certificate.png" alt="certificate-img responsive image">
     </div>
 
   </section>
