--- a/hobbies.html
+++ b/hobbies.html
@@ -69,7 +69,7 @@
     <div class=top-container-fluid>
       <h1>I am passionate</h1>
       <h2>about everything I do.</h2>
-      <img class="images img-fluid" src="images/game-console.png" alt="game-img responsive image">
+      <img class="images img-fluid" src="Images/game-console.png" alt="game-console-img responsive image">
     </div>
 
   </section>
@@ -82,19 +82,19 @@
       <div class="carousel-inner">
         <h2>My Passions.</h2>
         <div class="carousel-item active">
-          <img class="hobbies-image" src="images/Surfing.jpg" alt="surfing">
+          <img class="hobbies-image" src="Images/Surfing.jpg" alt="surfing-img">
           <h2 class="hobbies-text">Surfing</h2>
         </div>
         <div class="carousel-item">
-          <img class="hobbies-image" src="images/Snowboarding.jpg" alt="Snowboarding">
+          <img class="hobbies-image" src="Images/Snowboarding.jpg" alt="Snowboarding-img">
           <h2 class="hobbies-text">Snowboarding</h2>
         </div>
         <div class="carousel-item">
-          <img class="hobbies-image" src="images/American Literature.jpg" alt="Litterature">
+          <img class="hobbies-image" src="Images/American Literature.jpg" alt="American Literature-img">
           <h2 class="hobbies-text">American Literature</h2>
         </div>
         <div class="carousel-item">
-          <img class="hobbies-image" src="images/Oenology.jpg" alt="Oenology">
+          <img class="hobbies-image" src="Images/Oenology.jpg" alt="Oenology-img">
           <h2 class="hobbies-text">Oenology</h2>
         </div>
       </div>
