--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <h3>Feel free to contact me</h3>
       <p class="contact-msg">You can email me using the link below. All my details are also included in my full resume available for download.</p>
       <a href="mailto:athabuteau@gmail.com" class="btn btn-dark btn-lg" role="button"><i class="fas fa-at"></i> Contact Me</a>
-      <a href="Files/CV-alexis-thabuteau.pdf" class="btn btn-outline-dark btn-lg" role="button"><i class="far fa-file-pdf"></i> Download CV</a>
+      <a href="Files/CV-alexis-thabuteau_QR Code.pdf" class="btn btn-outline-dark btn-lg" role="button"><i class="far fa-file-pdf"></i> Download CV</a>
     </div>
   </div>
 
